--- a/src/components/Content/content.module.scss
+++ b/src/components/Content/content.module.scss
@@ -8,4 +8,15 @@
   &__container {
     padding: 20px 40px;
   }
+
+  &__users {
+    display: flex;
+    width: 100%;
+  }
+}
+
+.error {
+  font-size: 30px;
+  margin: 20px auto;
+  color: red;
 }
