--- a/src/components/Content/content.module.scss
+++ b/src/components/Content/content.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  row-gap: 50px;
   &__container {
     padding: 20px 40px;
   }
@@ -12,6 +13,12 @@
   &__users {
     display: flex;
     width: 100%;
+    max-width: 1260px;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    column-gap: 20px;
+    justify-content: center;
+    align-items: center;
   }
 }
 
